--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,15 +1,28 @@
 ---
-title: Le Wagon - Middleman
+title: Le Wagon - Middleman - Home
 ---
 
-<div id="home">
-  <div class="home-content">
-    <%= image_tag "logo.png", width: "200" %>
-    <p>
-      Middleman is now running!
-    </p>
-    <p class="about">
-      <%= link_to "More about this template", "about.html" %>
-    </p>
+<div class="banner" style="background-image: linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('https://kitt.lewagon.com/placeholder/cities/berlin');">
+  <div class="banner-content">
+    <h1>Le Wagon Berlin</h1>
+    <p>Learn to code with us in Berlin</p>
+    <a class="btn btn-primary btn-lg">Start now</a>
+  </div>
+</div>
+<div class="container">
+  <div class="row">
+    <% data.cities.each do |city| %>
+    <div class="col-xs-6 col-sm-4">
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/<%= city.name %>');">
+        <div class="card-category"><%= city.category %></div>
+        <div class="card-description">
+          <h2><%= city.title %></h2>
+          <p><%= city.paragraph %></p>
+        </div>
+        <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
+        <a class="card-link" href="#" ></a>
+      </div>
+    </div>
+    <% end %>
   </div>
 </div>
